--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
+    "@sentry/nextjs": "^8.13.0",
     "@tabler/icons-react": "^3.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
