--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@react-three/fiber": "^8.16.8",
     "@sentry/nextjs": "^8.13.0",
     "@tabler/icons-react": "^3.7.0",
+    "@types/connect": "^3.4.38",
+    "@types/http-assert": "^1.5.5",
+    "@types/koa": "^2.15.0",
+    "@types/koa__router": "^12.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dropdown-menu": "^0.1.1",
