--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.15",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -16,7 +17,6 @@
     "@react-three/fiber": "^8.16.8",
     "@sentry/nextjs": "^8.13.0",
     "@tabler/icons-react": "^3.7.0",
-    "@types/connect": "^3.4.38",
     "@types/http-assert": "^1.5.5",
     "@types/koa": "^2.15.0",
     "@types/koa__router": "^12.0.4",
@@ -27,7 +27,9 @@
     "lucide-react": "^0.399.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
+    "notion-to-md": "^3.1.1",
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -39,10 +41,20 @@
     "three-globe": "^2.31.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/connect": "^3.4.38",
+    "@types/content-disposition": "^0.5.8",
+    "@types/debounce": "^1.2.4",
+    "@types/eslint-scope": "^3.7.7",
+    "@types/express-serve-static-core": "^5.0.1",
+    "@types/mime": "^4.0.0",
+    "@types/ms": "^0.7.34",
+    "@types/node": "^20.17.6",
+    "@types/pg-pool": "^2.0.6",
+    "@types/range-parser": "^1.2.7",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/react-lottie": "^1.2.10",
+    "@types/three": "^0.169.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
